<?xml version="1.0"?>
<package>
    <name>image_entropy</name>
    <version>0.0.1</version>
    <description>The image_entropy package</description>
    <maintainer email="wallar@mit.edu">Alex Wallar</maintainer>
    <license>GPLv3</license>
    <author email="wallar@mit.edu">Alex Wallar</author>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>eigen</build_depend>
    <build_depend>message_generation</build_depend>
    <run_depend>eigen</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
</package>
